--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,13 @@
-<p>menu-bar works!</p>
+<div class="container__menu-bar">
+    <ul>
+        <li>
+            <a href="#" target="_blank">LinkedIn</a>
+        </li>
+        <li>
+            <a href="#" target="_blank">GitHub</a>
+        </li>
+        <li>
+            <a href="#" target="_blank">YouTube</a>
+        </li>
+    </ul>
+</div>
