--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -4,10 +4,19 @@
             <a href="#" target="_blank">LinkedIn</a>
         </li>
         <li>
+            <span class="iconify" data-icon="raphael:linkedin"></span>
+        </li>
+        <li>
             <a href="#" target="_blank">GitHub</a>
         </li>
         <li>
+            <span class="iconify" data-icon="jam:github"></span>
+        </li>
+        <li>
             <a href="#" target="_blank">YouTube</a>
+        </li>
+        <li>
+            <span class="iconify" data-icon="formkit:youtube"></span>
         </li>
     </ul>
 </div>
