--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,26 +3,26 @@
     <div class="articles__main">
         <app-big-card 
             id="1"
-            photoCover=""
-            cardTitle=""
-            cardDescription=""
+            photoCover="https://res.cloudinary.com/canonical/image/fetch/f_auto,q_auto,fl_sanitize,w_2560,h_1440/https://assets.ubuntu.com/v1/54331fa0-edubuntu-2304-screenshot.png"
+            cardTitle="Edubuntu"
+            cardDescription="Edubuntu is an official flavor of Ubuntu crafted for use in the education world. Teachers and students will have access to a huge ecosystem of learning software and educational tools built on a familiar and usable desktop. Edubuntu provides a fast, stable, secure and privacy conscious option for schools, universities and other places of learning."
         />
     </div>
     <div class="articles__others">
         <app-small-card 
             id="2"
-            photoCover=""
-            cardTitle=""
+            photoCover="https://res.cloudinary.com/canonical/image/fetch/f_auto,q_auto,fl_sanitize,w_2560,h_1440/https://assets.ubuntu.com/v1/7c6fa2da-kubuntu-2204-screenshot.png"
+            cardTitle="Kubuntu"
         />
         <app-small-card 
             id="3"
-            photoCover=""
-            cardTitle=""
+            photoCover="https://res.cloudinary.com/canonical/image/fetch/f_auto,q_auto,fl_sanitize,w_1920,h_1080/https://assets.ubuntu.com/v1/eb97c55b-Ubuntu_Budgie.png"
+            cardTitle="Ubuntu Budgie"
         />
         <app-small-card 
             id="4"
-            photoCover=""
-            cardTitle=""
+            photoCover="https://res.cloudinary.com/canonical/image/fetch/f_auto,q_auto,fl_sanitize,w_1920,h_1080/https://assets.ubuntu.com/v1/5f23328b-xubuntu-2204-screenshot.png"
+            cardTitle="Xubuntu"
         />
     </div>
 </div>
