--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,1 +1,23 @@
-<p>big-card works!</p>
+<div class="container__big-card">
+    <div class="big-card__photo">
+        <img [src]="photoCover" 
+            alt=""
+            height="200px">
+    </div>
+    
+    <div class="big-card__title">
+        <h1>
+            <a [routerLink]="['content', id]">
+                {{cardTitle}}
+            </a>
+        </h1>
+    </div>
+
+    <div>
+        <p>
+            <a [routerLink]="['content', id]">
+                {{cardDescription}}
+            </a>
+        </p>
+    </div>
+</div>
