--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,19 @@
-<p>small-card works!</p>
+<div class="container__small-card">
+    <div class="container__small-card-content">
+        <div class="small-card__photo">
+            <img [src]="photoCover"
+                alt=""
+                height="200px"/>
+        </div>
+        <div class="small-card__title">
+            <h1>
+                <a [routerLink]="['content', id]">
+                    {{cardTitle}}
+                </a>
+            </h1>
+        </div>
+    </div>
+    <div class="container__small-card-separator">
+        <hr />
+    </div>
+</div>
